--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "CrudBackEnd",
-  "displayName": "CrudExtension",
+  "name": "KEBackNodeJs",
+  "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
   "version": "0.0.1",
