--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -97,6 +97,10 @@
       {
         "command": "NodeJs.Task.NewTask.CreatePost",
         "title": "NodeJs Task NewTask CreatePost"
+      },
+      {
+        "command": "NodeJs.Task.NewTask.Check",
+        "title": "NodeJs Task NewTask Check"
       },
       {
         "command": "KChakri",
