File as json started

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -105,6 +105,10 @@
       {
         "command": "NodeJs.Task.NewTask.GenerateToken",
         "title": "NodeJs Task NewTask GenerateToken"
+      },
+      {
+        "command": "NodeJs.Task.NewTask.CreateFile",
+        "title": "NodeJs Task NewTask CreateFile"
       },
       {
         "command": "KChakri",
