--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -117,6 +117,14 @@
       {
         "command": "NodeJs.Task.NewTask.FileAsObject.FileDelete",
         "title": "NodeJs Task NewTask FileAsObject FileDelete"
+      },
+      {
+        "command": "NodeJs.Task.NewTask.FileAsObjTasks.ReadContent",
+        "title": "NodeJs Task NewTask FileAsObjTasks ReadContent"
+      },
+      {
+        "command": "NodeJs.Task.NewTask.FileAsObjTasks.InsertContent",
+        "title": "NodeJs Task NewTask FileAsObjTasks InsertContent"
       },
       {
         "command": "KChakri",
