--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -133,6 +133,14 @@
       {
         "command": "NodeJs.FileAsObject.FileCreate",
         "title": "NodeJs FileAsObject FileCreate"
+      },
+      {
+        "command": "NodeJs.FileAsObject.FileDelete",
+        "title": "NodeJs FileAsObject FileDelete"
+      },
+      {
+        "command": "NodeJs.FileAsObject.FileRead",
+        "title": "NodeJs FileAsObject FileRead"
       },
       {
         "command": "KChakri",
