--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
-  "version": "0.0.23",
+  "version": "0.0.24",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -159,12 +159,8 @@
         "title": "NodeJs FileAsObjectContent Delete"
       },
       {
-        "command": "KChakri",
-        "title": "KChakri"
-      },
-      {
-        "command": "KCharan",
-        "title": "KCharan"
+        "command": "NodeJs.RouteUse.CreateNew",
+        "title": "NodeJs RouteUse CreateNew"
       }
     ],
     "menus": {
