KS FilesAsObject 2 working

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
-  "version": "0.0.31",
+  "version": "0.0.32",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -189,6 +189,10 @@
       {
         "command": "KS.RouteUse.CreateNew",
         "title": "KS RouteUse CreateNew"
+      },
+      {
+        "command": "KS.FileAsObject.FileCreate",
+        "title": "KS FileAsObject FileCreate"
       }
     ],
     "menus": {
