--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
-  "version": "0.0.32",
+  "version": "0.0.33",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -193,6 +193,18 @@
       {
         "command": "KS.FileAsObject.FileCreate",
         "title": "KS FileAsObject FileCreate"
+      },
+      {
+        "command": "KS.FileAsArray.FileCreate",
+        "title": "KS FileAsArray FileCreate"
+      },
+      {
+        "command": "KS.FileAsArray.FileDelete",
+        "title": "KS FileAsArray FileDelete"
+      },
+      {
+        "command": "KS.FileAsArray.CreateWithContent",
+        "title": "KS FileAsArray CreateWithContent"
       }
     ],
     "menus": {
