--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
-  "version": "0.0.42",
+  "version": "0.0.43",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -233,6 +233,10 @@
       {
         "command": "KS.BoilerPlate.ArrayAndContent",
         "title": "KS BoilerPlate ArrayAndContent"
+      },
+      {
+        "command": "KS.Tasks.ArrayAsContent.Insert",
+        "title": "KS Tasks ArrayAsContent Insert"
       }
     ],
     "menus": {
