--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
-  "version": "0.9.60",
+  "version": "0.9.61",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -265,6 +265,10 @@
       {
         "command": "KS.Tasks.ArrayAsContent.AlterRow",
         "title": "KS Tasks ArrayAsContent AlterRow"
+      },
+      {
+        "command": "KS.App.InsertFile",
+        "title": "KS App InsertFile"
       }
     ],
     "menus": {
