--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
-  "version": "0.9.64",
+  "version": "0.10.1",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -273,6 +273,10 @@
       {
         "command": "KS.Tasks.WithTableName.InsertWithPk",
         "title": "KS Tasks WithTableName InsertWithPk"
+      },
+      {
+        "command": "KS.BoilerPlate.FromJson",
+        "title": "KS BoilerPlate FromJson"
       }
     ],
     "menus": {
