--- a/src/V9/KS/BoilerPlate/FromJson/CopyCode/package.json
+++ b/src/V9/KS/BoilerPlate/FromJson/CopyCode/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task1",
+  "name": "jsoncrud",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^2.2.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "cookie-parser": "^1.4.7"
   }
 }
