--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
-  "version": "0.11.5",
+  "version": "0.11.6",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -289,6 +289,10 @@
       {
         "command": "KS.Tasks.WithTableName.Delete",
         "title": "KS Tasks WithTableName Delete"
+      },
+      {
+        "command": "KS.Tasks.WithTableName.RowDataWithPk",
+        "title": "KS Tasks WithTableName RowDataWithPk"
       }
     ],
     "menus": {
