--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "KEBackNodeJs",
   "publisher": "KeshavSoft",
   "description": "KeshavSoft Extension to enhance the development of web applications",
-  "version": "1.19.1",
+  "version": "1.19.2",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -321,6 +321,10 @@
       {
         "command": "KS.Append.WithSubTable",
         "title": "KS Append WithSubTable"
+      },
+      {
+        "command": "KS.App.CreateNew",
+        "title": "KS App CreateNew"
       }
     ],
     "menus": {
