added VERSION in env file ,chanegd schema

--- a/src/V28/KS/Append/FrontAndBack/FirstCopy/CreateSchema/TasksTable.json
+++ b/src/V28/KS/Append/FrontAndBack/FirstCopy/CreateSchema/TasksTable.json
@@ -13,7 +13,7 @@
             "title": "Start Date",
             "unique": false,
             "type": "date",
-            "isInput": true
+            "isDate":true
         },
         {
             "field": "className",
@@ -70,5 +70,10 @@
                 }
             ]
         }
-    ]
+    ],
+    "DataTableOptions": {
+        "Header": {
+            "autoFocus": "title"
+        }
+    }
 }
